gcc/testsuite/g++.dg/template/void10.C
@@ -1,0 +1,10 @@
+//PR c++/28736
+
+template<void> struct A                 // { dg-error "not a valid type" }
+{
+    template<typename> friend struct B;
+};
+
+template<typename> struct B {};
+
+B<int> b;                              // { dg-error "template argument|invalid type" }
